--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./script.js"></script>
 </body>
 
-</html>\\ 
+</html>
