--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
           </h2>
           <div class="row col-6">
             <input
-              id="cityName"
+              id="State"
               type="text"
               class="form-control"
-              placeholder="Enter City"
+              placeholder="Enter State"
             />
             <label for="fuels">
               <select name="fuels" id="fuelType" class="form-control">
