--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </select>
             <label for="fuels">
               <select name="fuels" id="fuelType" class="form-control">
-                <option disabled selected >Select Fuel Type</option>
+                <option value="all">Select Fuel Type</option>
                 <option value="BD">Biodiesel (B20 and Above)</option>
                 <option value="CNG">Compressed Natural Gas (CNG)</option>
                 <option value="ELEC">Electric</option>
