--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
           </div>
         </div>
       </div>
+      <div class="Loading"></div>
       <div class="list jumbotron"></div>
       <div class="container d-flex justify-content-center">
         <div class="jumbotron">
