--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
       </div>
       <div class="Loading"></div>
-      <div class="list jumbotron"></div>
+      <div class="list"></div>
       <div class="container d-flex justify-content-center">
         <div class="jumbotron">
             <div id='map' style='width: 800px; height: 400px;'></div>
