--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <title>Gas price</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Tangerine"
@@ -23,18 +26,18 @@
   </head>
 
   <body>
-    <nav class="text-center">
+    <nav class="text-center bg-success text-white">
       <h1>Gas price</h1>
     </nav>
-    <main>
-      <div class="container-fluid d-flex justify-content-center">
-        <div class="jumbotron bg-success user-info-section">
-          <h2 class="welcome-heading text-center">
+    <main class="bg-success"> 
+      <div class="container-fluid d-flex justify-content-center  ">
+        <div class="jumbotron bg-white text-success user-info-section text-center">
+          <h2 class="welcome-heading text-center ">
             Welcome to gas finder. Please enter your information.
           </h2>
-          <div class="row col-6">
-            <label for="fuels">
-                <select name="State_Name" id="State" class="form-control">
+          <div >
+            <label for="fuels ">
+                <select name="State_Name" id="State" class="form-control text-center">
                     <option value="AL">Alabama</option>
                     <option value="AK">Alaska</option>
                     <option value="AZ">Arizona</option>
@@ -88,7 +91,7 @@
                     <option value="WY">Wyoming</option>
                 </select>
             <label for="fuels">
-              <select name="fuels" id="fuelType" class="form-control">
+              <select name="fuels" id="fuelType" class="form-control text-center">
                 <option value="all">Select Fuel Type</option>
                 <option value="BD">Biodiesel (B20 and Above)</option>
                 <option value="CNG">Compressed Natural Gas (CNG)</option>
@@ -100,7 +103,7 @@
               </select>
               <button
                 id="searchButton"
-                class="btn btn-primary btn-wide bg-dark"
+                class="btn btn-primary btn-wide bg-success text-white align-center"
                 type="button"
               >
                 Search
@@ -111,9 +114,9 @@
         </div>
       </div>
       <div class="Loading"></div>
-      <div class="list jumbotron"></div>
+      <div class="list jumbotron bg-success"></div>
       <div class="container d-flex justify-content-center">
-        <div class="jumbotron">
+        <div class="jumbotron bg-success ">
             <div id='map' style='width: 800px; height: 400px;'></div>
         </div>
       </div>
