--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <title>Gas price</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Tangerine"
@@ -21,20 +24,21 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css' rel='stylesheet' />
   </head>
-
-  <body>
-    <nav class="text-center">
-      <h1>Gas price</h1>
+  
+  <body class="coded bg-success">
+    <nav>
+      <h1 class="text-center Title">Gas price</h1>
+      <button class="Mode modeChange"> Dark Mode </button>
     </nav>
-    <main>
+    <main class="coded bg-success"> 
       <div class="container-fluid d-flex justify-content-center">
-        <div class="jumbotron bg-success user-info-section">
+        <div class="settle jumbotron bg-white text-success user-info-section text-center">
           <h2 class="welcome-heading text-center">
             Welcome to gas finder. Please enter your information.
           </h2>
-          <div class="row col-6">
-            <label for="fuels">
-                <select name="State_Name" id="State" class="form-control">
+          <div >
+            <label for="fuels ">
+                <select name="State_Name" id="State" class="form-control text-center">
                     <option value="AL">Alabama</option>
                     <option value="AK">Alaska</option>
                     <option value="AZ">Arizona</option>
@@ -88,7 +92,7 @@
                     <option value="WY">Wyoming</option>
                 </select>
             <label for="fuels">
-              <select name="fuels" id="fuelType" class="form-control">
+              <select name="fuels" id="fuelType" class="form-control text-center">
                 <option value="all">Select Fuel Type</option>
                 <option value="BD">Biodiesel (B20 and Above)</option>
                 <option value="CNG">Compressed Natural Gas (CNG)</option>
@@ -100,7 +104,7 @@
               </select>
               <button
                 id="searchButton"
-                class="btn btn-primary btn-wide bg-dark"
+                class="btn btn-primary btn-wide bg-success text-white align-center"
                 type="button"
               >
                 Search
@@ -111,9 +115,9 @@
         </div>
       </div>
       <div class="Loading"></div>
-      <div class="list"></div>
+      <div class="coded list bg-success"></div>
       <div class="container d-flex justify-content-center">
-        <div class="jumbotron">
+        <div class="coded jumbotron bg-success">
             <div id='map' style='width: 800px; height: 400px;'></div>
         </div>
       </div>
