--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css' rel='stylesheet' />
   </head>
-
-  <body>
-    <nav class="text-center bg-success text-white">
-      <h1>Gas price</h1>
+  
+  <body class="coded bg-success">
+    <nav>
+      <h1 class="text-center Title">Gas price</h1>
+      <button class="Mode modeChange"> Dark Mode </button>
     </nav>
-    <main class="bg-success"> 
-      <div class="container-fluid d-flex justify-content-center  ">
-        <div class="jumbotron bg-white text-success user-info-section text-center">
-          <h2 class="welcome-heading text-center ">
+    <main class="coded bg-success"> 
+      <div class="container-fluid d-flex justify-content-center">
+        <div class="settle jumbotron bg-white text-success user-info-section text-center">
+          <h2 class="welcome-heading text-center">
             Welcome to gas finder. Please enter your information.
           </h2>
           <div >
@@ -114,9 +115,9 @@
         </div>
       </div>
       <div class="Loading"></div>
-      <div class="list jumbotron bg-success"></div>
+      <div class="coded list bg-success"></div>
       <div class="container d-flex justify-content-center">
-        <div class="jumbotron bg-success ">
+        <div class="coded jumbotron bg-success">
             <div id='map' style='width: 800px; height: 400px;'></div>
         </div>
       </div>
