--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Gas price</title>
+    <title>Gas Buddy</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,14 +27,14 @@
   
   <body class="coded bg-success">
     <nav>
-      <h1 class="text-center Title">Gas price</h1>
+      <h1 class="text-center Title">Gas Buddy</h1>
       <button class="Mode modeChange"> Dark Mode </button>
     </nav>
     <main class="coded bg-success"> 
       <div class="container-fluid d-flex justify-content-center">
         <div class="settle jumbotron bg-white text-success user-info-section text-center">
           <h2 class="welcome-heading text-center">
-            Welcome to gas finder. Please enter your information.
+            Welcome to Gas Buddy. Please enter your State and the type of gas.
           </h2>
           <div >
             <label for="fuels ">
