--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <option value="ELEC">Electric</option>
                 <option value="E85">Ethanol (E85)</option>
                 <option value="HY">Hydrogen</option>
-                <option value="LNG">liquefied Natural Gas (LNG)</option>
+                <option value="LNG">Liquefied Natural Gas (LNG)</option>
                 <option value="LPG">Propane (LPG)</option>
               </select>
               <button
