fixed typos in html

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                 <option value="BD">Biodiesel (B20 and Above)</option>
                 <option value="CNG">Compressed Natural Gas (CNG)</option>
                 <option value="ELEC">Electric</option>
-                <option value="E85">Ethonol (E85)</option>
+                <option value="E85">Ethanol (E85)</option>
                 <option value="HY">Hydrogen</option>
-                <option value="LNG">Liquiefied Natural Gas (LNG)</option>
+                <option value="LNG">Liquified Natural Gas (LNG)</option>
                 <option value="LPG">Propane (LPG)</option>
               </select>
               <button
